--- a/res/index.html
+++ b/res/index.html
@@ -16,7 +16,7 @@
 			<div class="col-md-10 col-md-offset-1">
 				<div class="page-header">
 					<h3>{{.Title}} >
-						<button id="showTextSharingBoxBtn" type="submit" class="btn btn-primary">Text</button>
+						<button id="showTextSharingBoxBtn" type="button" class="btn btn-primary">Text</button>
 					</h3>
 				</div>
 				<form action="/upload/" id="dropzone" class="dropzone" method="post" enctype="multipart/form-data">
@@ -27,7 +27,7 @@
 									<th class="col-md-1">#</th>
 									<th class="col-md-8">Name</th>
 									<th class="col-md-2">Size</th>
-                                   <th class="col-md-1">Action</th>
+                                    <th class="col-md-1">Action</th>
 								</tr>
 							</thead>
 							<tbody id="rows">
@@ -54,10 +54,22 @@
 		                <h4 class="modal-title">{{.Title}}</h4>
 		            </div>
 		            <div class="panel-body modal-body">
-						<h1>Coming soon!!!<h1>
+						<form class="form-vertical">
+                            <div class="form-group">
+                                <label for="title" class="control-label">Title</label>
+
+                                <input id="title" type="text" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="body" class="control-label">Body</label>
+
+                                <textarea id="body" rows="11" class="form-control"></textarea>
+                            </div>
+                        </form>
 		            </div>
 					<div class="modal-footer">
-						<button id="okBtn" type="submit" class="btn btn-success col-md-offset-6">Ok</button>
+						<button id="okBtn" type="button" class="btn btn-success col-md-offset-6">Ok</button>
+						<button id="cancelBtn" type="button" class="btn btn-success col-md-offset-6">Cancel</button>
 					</div>
 		        </div>
 		    </div>
@@ -97,7 +109,9 @@
 				$.ajax({
   					type: "POST",
   					url: "/remove/",
-  					data: {"fileName": fileName},
+  					data: {
+						"fileName": fileName
+					},
                     success: function() {
                         $("#row_"+idx).remove()
                     },
@@ -116,7 +130,25 @@
 			}
 
 			$('#closeBtn').on('click', onCloseTextSharingBox)
-			$('#okBtn').on('click', onCloseTextSharingBox)
+			$('#okBtn').on('click', function() {
+				$.ajax({
+  					type: "POST",
+  					url: "/shareText/",
+  					data: {
+						"title": $("#title").val(),
+						"body": $("#body").val()
+					},
+                    success: function() {
+						$('#textSharingBox').modal('hide')
+						
+						location.reload()	
+                    },
+                    error: function() {
+                        alert("can't share text")
+                    }
+				})
+			})
+			$('#cancelBtn').on('click', onCloseTextSharingBox)
 		</script>
 	</body>
 </html>
