--- a/res/index.html
+++ b/res/index.html
@@ -1,79 +1,95 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="msapplication-tap-highlight" content="no"/>
+		<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no'/>
+
 		<title>{{.Title}}</title>
+
 		<link rel="shortcut icon" type="image/x-icon" href="res/file-sharing.jpg" />
 		<link href="res/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="res/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="res/dropzone/css/basic.css" rel="stylesheet">
 		<link href="res/dropzone/css/dropzone.css" rel="stylesheet">
+		<link href="res/file-sharing.css" rel="stylesheet">
+
 		<script type="text/javascript" src="res/jquery/js/jquery.min.js"></script>
 		<script type="text/javascript" src="res/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="res/dropzone/dropzone.js"></script>
 	</head>
 	<body>
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
-				<div class="page-header">
-					<h3>{{.Title}} >
-						<button id="showTextSharingBoxBtn" type="button" class="btn btn-primary">Text</button>
-					</h3>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="page-header">
+						<h3>{{.Title}} >
+							<button id="showTextSharingBoxBtn" type="button" class="btn btn-primary">Text</button>
+						</h3>
+					</div>
+					<form action="/upload/" id="dropzone" class="dropzone" method="post" enctype="multipart/form-data">
+						<div class="form-group">
+							<table class="table table-bordered">
+								<thead>
+									<tr>
+										<th class="col-md-1">#</th>
+										<th class="col-md-8">Name</th>
+										<th class="col-md-2">Size</th>
+										<th class="col-md-1">Action</th>
+									</tr>
+								</thead>
+								<tbody id="rows">
+                                    {{range $index, $fileInfo := .FileInfoList}}
+                                        <tr id="row_{{$index}}">
+                                            <td>{{increment $index}}</td>
+                                            <td id="name"><a href="{{$fileInfo.Path}}">{{$fileInfo.Name}}</a></td>
+                                            <td>{{$fileInfo.Size}}</td>
+                                            <td class="text-center">
+                                                <button type="button" class="btn btn-danger btn-xs" onclick="removeFileRequest({{$index}}, '{{$fileInfo.Name}}')">&times;</button>
+                                            </td>
+                                        </tr>
+                                    {{else}}
+                                        <tr>
+                                            <td colspan="4" class="text-center">
+                                                No files uploaded yet
+                                            </td>
+                                        </tr>
+                                    {{end}}
+								</tbody>
+							</table>
+						</div>
+					</form>
 				</div>
-				<form action="/upload/" id="dropzone" class="dropzone" method="post" enctype="multipart/form-data">
-					<div class="form-group">
-						<table class="table table-bordered">
-							<thead>
-								<tr>
-									<th class="col-md-1">#</th>
-									<th class="col-md-8">Name</th>
-									<th class="col-md-2">Size</th>
-                                    <th class="col-md-1">Action</th>
-								</tr>
-							</thead>
-							<tbody id="rows">
-							{{range $index, $fileInfo := .FileInfoList}}
-								<tr id="row_{{$index}}">
-									<td>{{increment $index}}</td>
-									<td id="name"><a href="{{$fileInfo.Path}}">{{$fileInfo.Name}}</a></td>
-									<td>{{$fileInfo.Size}}</td>
-                                   <td><input type="button" onclick="removeFileRequest({{$index}}, '{{$fileInfo.Name}}')" value="&times;"></input></td>
-								</tr>
-							{{end}}
-							</tbody>
-						</table>
-					</div>
-				</form>
 			</div>
-		</div>
 
-		<div id="textSharingBox" class="modal fade">
-		    <div class="modal-dialog">
-		        <div class="panel modal-content">
-		            <div class="panel-heading modal-header">
-		                <button id="closeBtn" class="close col-sm-1" aria-hidden="true">&times;</button>
-		                <h4 class="modal-title">{{.Title}}</h4>
-		            </div>
-		            <div class="panel-body modal-body">
-						<form class="form-vertical">
-                            <div id="titleGroup" class="form-group">
-                                <label for="title" class="control-label">Title</label>
+			<div id="textSharingBox" class="modal fade">
+				<div class="modal-dialog">
+					<div class="panel modal-content">
+						<div class="panel-heading modal-header">
+							<button id="closeBtn" class="close col-sm-1" aria-hidden="true">&times;</button>
+							<h4 class="modal-title">{{.Title}}</h4>
+						</div>
+						<div class="panel-body modal-body">
+							<form class="form-vertical">
+								<div id="titleGroup" class="form-group">
+									<label for="title" class="control-label">Title</label>
 
-                                <input id="title" type="text" class="form-control">
-                            </div>
-                            <div id="bodyGroup" class="form-group">
-                                <label for="body" class="control-label">Body</label>
+									<input id="title" type="text" class="form-control">
+								</div>
+								<div id="bodyGroup" class="form-group">
+									<label for="body" class="control-label">Body</label>
 
-                                <textarea id="body" rows="11" class="form-control"></textarea>
-                            </div>
-                        </form>
-		            </div>
-					<div class="modal-footer">
-						<span id="errorLabel" style="color: #ff0000; display: none;">You must fill in all fields</span>
-						<button id="okBtn" type="button" class="btn btn-success col-md-offset-6" autofocus>Ok</button>
-						<button id="cancelBtn" type="button" class="btn btn-success col-md-offset-6">Cancel</button>
+									<textarea id="body" rows="11" class="form-control"></textarea>
+								</div>
+							</form>
+						</div>
+						<div class="modal-footer">
+							<span id="errorLabel" style="color: #ff0000; display: none;">You must fill in all fields</span>
+							<button id="okBtn" type="button" class="btn btn-success col-md-offset-6" autofocus>Ok</button>
+							<button id="cancelBtn" type="button" class="btn btn-default col-md-offset-6">Cancel</button>
+						</div>
 					</div>
-		        </div>
-		    </div>
+				</div>
+			</div>
 		</div>
 
 		<script>
