--- a/res/index.html
+++ b/res/index.html
@@ -26,7 +26,7 @@
 							<button id="showTextSharingBoxBtn" type="button" class="btn btn-primary">Text</button>
 						</h3>
 					</div>
-					<form action="/upload/" id="dropzone" class="dropzone" method="post" enctype="multipart/form-data">
+					<form action="upload/" id="dropzone" class="dropzone" method="post" enctype="multipart/form-data">
 						<div class="form-group">
 							<table class="table table-bordered">
 								<thead>
