--- a/res/index.html
+++ b/res/index.html
@@ -125,7 +125,7 @@
 			var removeFileRequest = function(idx, fileName) {
 				$.ajax({
   					type: "POST",
-  					url: "/remove/",
+  					url: "remove/",
   					data: {
 						"fileName": fileName
 					},
