Share text handler was corrected

--- a/res/index.html
+++ b/res/index.html
@@ -173,7 +173,7 @@
 
 				$.ajax({
   					type: "POST",
-  					url: "/shareText/",
+  					url: "shareText/",
   					data: {
 						"title": title,
 						"body": body
