--- a/res/view.html
+++ b/res/view.html
@@ -22,9 +22,8 @@
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
 					<div class="page-header">
-						<h3>{{.Title}} >
-							<button id="showTextSharingBoxBtn" type="button" class="btn btn-primary">Text</button>
-						</h3>
+						<img src="/res/logo.jpg" height="100">
+						<button id="showTextSharingBoxBtn" type="button" class="btn btn-primary">Text</button>
 					</div>
 					<form action="upload/" id="dropzone" class="dropzone" method="post" enctype="multipart/form-data">
 						<div class="form-group">
