Drop file size was increased

--- a/res/view.html
+++ b/res/view.html
@@ -100,7 +100,7 @@
             // setup dropzone
 			Dropzone.options.dropzone = {
 				paramName: "file", // The name that will be used to transfer the file
-				maxFilesize: 10000, // MB
+				maxFilesize: 32 * 1024, // MB
 				addRemoveLinks: true,
 				dictCancelUpload: "Cancel",
 				dictRemoveFile: "Remove",
